@@ -13,7 +13,11 @@
 #' @param printout A character string to be included in the \code{printout()} function. This string will be
 #'		pasted as-is, after \code{results.header} has been evaluated. Ignored if \code{doPrintout} is set.
 #' @param doPrintout A character string to be included in the \code{doPrintout()} function. This string will be
-#'		pasted as-is. You don't need to define a \code{preview()} function, as this will be added automatically. Use \code{ite("full", ...)} style JavaScript code to include headers etc.
+#'		pasted as-is. You don't need to define a \code{preview()} function, as this will be added automatically.
+#'		Use \code{ite("full", ...)} style JavaScript code to include headers etc.
+#' @param load.silencer Either a character string (ID of probably a checkbox), or an object of class \code{XiMpLe.node}.
+#'		This defines a switch you can add to your plugin, to set the \code{require()} call inside \code{suppressMessages()},
+#'		hence suppressing all load messages (except for warnings and errors) of required packages in the output.
 #' @param gen.info Logical, if \code{TRUE} a comment note will be written into the document,
 #'		that it was generated by \code{rkwarddev} and changes should be done to the script.
 #' @param indent.by A character string defining how indentation should be done.
@@ -28,12 +32,22 @@
 #' @export
 
 rk.JS.doc <- function(require=c(), variables=NULL, results.header=NULL,
-	preprocess=NULL, calculate=NULL, printout=NULL, doPrintout=NULL, gen.info=TRUE, indent.by="\t"){
+	preprocess=NULL, calculate=NULL, printout=NULL, doPrintout=NULL, load.silencer=NULL, gen.info=TRUE, indent.by="\t"){
 
 	js.gen.info <- ifelse(isTRUE(gen.info), rk.paste.JS(generator.info, level=1), "")
 
 	js.require <- unlist(sapply(require, function(this.req){
-			rk.paste.JS(echo(id("require(", this.req, ")\n")), level=2, indent.by=indent.by)
+			if(is.null(load.silencer)){
+				req.result <- rk.paste.JS(echo(id("require(", this.req, ")\n")), level=2, indent.by=indent.by)
+			} else {
+				# get the ID, if it's a XiMpLe.node
+				req.result <- rk.paste.JS(
+					jsChkSuppress <- rk.JS.vars(load.silencer),
+					# somehow "quietly=TRUE" doens't always do the trick
+					ite(jsChkSuppress, echo("suppressMessages(require(", this.req, "))\n"), echo("require(", this.req, ")\n"))
+				)
+			}
+			return(req.result)
 		}))
 	js.preprocess <- paste("function preprocess(){\n",
 		indent(2, by=indent.by), "// add requirements etc. here\n",
